emails and cards